# livetik

./: .env.example  .gitignore  BACKUP_GUIDE.md  BUGFIX_PLAN.md  BUGFIX_SUMMARY.md  DOCS_HUB.md  LICENSE  PRE_LIVE_CHECKLIST.md  QUICKSTART.md  QUICK_START.bat  README.md  WORKFLOW_ACTUAL.md  dev.bat  install.bat  recreate-venv.bat  start-worker-direct.bat  start-worker.bat  test_ws_quick.js
apps/worker/: .env.bak.20260424_184611  .state.json  pyproject.toml
apps/worker/config/: clips_script.yaml  persona.md  products.yaml  reply_templates.yaml
apps/worker/scripts/: build_yaml.py  encode_manager.py  gen_audio_library.bat  gen_audio_library.py  gen_clips_yaml.py  gen_manager.py  health_check.py  manager_hex.txt  write_manager.py
apps/worker/src/banghack/: __init__.py  __main__.py  main.py
apps/worker/src/banghack/adapters/: __init__.py  audio_library.py  cartesia_pool.py  llm.py  tiktok.py  tts.py
apps/worker/src/banghack/config/: persona.md
apps/worker/src/banghack/core/: __init__.py  config_store.py  cost.py  guardrail.py  models.py  persona.py  queue.py  tiktok_supervisor.py
apps/worker/src/banghack/core/audio_library/: __init__.py  manager.py
apps/worker/src/banghack/core/classifier/: llm_fallback.py  rules.py
apps/worker/src/banghack/ipc/: __init__.py  audio.py  http_server.py  ws_server.py
apps/worker/src/banghack/telemetry/: __init__.py
apps/worker/static/audio_library/: index.json
apps/worker/tests/: __init__.py  test_audio_library.py  test_classifier_rules.py  test_director_state.py  test_reply_cache.py  test_suggester.py
docs/: DESIGN.md  (+15 more)
(+90 files in other folders)
